--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@
 }
 .img {
   display: block;
+  position: relative;
   max-width: 100%;
   height: auto;
 }
@@ -478,12 +479,42 @@
 .portfolio-link {
   display: block;
   text-decoration: none;
+  overflow: hidden;
 }
+
 .portfolio-link:hover,
 .portfolio-link:focus {
   border: 1px solid #eeeeee;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-link:hover .animation-text {
+ transform: translatey(0);
+}
+.animation-div {
+  position: relative;
+}
+
+.animation-text {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  padding-left: 63px;
+  padding-right: 63px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translatey(150%);
+  transition: transform 250ms ease;
+  background-color: rgba(33, 150, 243, 0.9);;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+color: #FFFFFF;
 }
 
 .card {
