--- a/css/styles.css
+++ b/css/styles.css
@@ -494,15 +494,19 @@
 }
 .animation-div {
   position: relative;
+  overflow: hidden;
 }
 
 .animation-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  padding-left: 63px;
-  padding-right: 63px;
+  padding-top: 63px;
+  padding-bottom: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -511,6 +515,7 @@
   transform: translatey(150%);
   transition: transform 250ms ease;
   background-color: rgba(33, 150, 243, 0.9);;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
 
