--- a/css/styles.css
+++ b/css/styles.css
@@ -273,14 +273,15 @@
   color: var(--main-btn-color);
   cursor: pointer;
 
-  transition: color var(--animation-fast);
-  transition: background-color var(--animation-fast);
+  transition: background var(--animation-fast);
+  transition: box-shadow var(--animation-fast), border-radius var(--animation-fast);
 }
 
 .hero-button:hover,
 .hero-button:focus {
-  background-color: var(--acsent-btn-bgc);
-  color: var(--acsent-btn-color);
+  background: #188CE8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 .bacdroup {
   position: fixed;
