--- a/css/styles.css
+++ b/css/styles.css
@@ -85,8 +85,8 @@
 .header-div {
   display: flex;
   margin: 0 auto;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  /* padding-top: 24px;
+  padding-bottom: 24px; */
   padding-left: 15px;
   padding-right: 15px;
   width: 1200px;
@@ -96,6 +96,7 @@
 /* nav */
 .header-nav {
   display: flex;
+  align-items: center;
 }
 .header-logo {
   margin-right: 93px;
@@ -162,6 +163,7 @@
 
 /* header item */
 .header-link {
+  display: block;
   position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -274,12 +276,13 @@
   cursor: pointer;
 
   transition: background var(--animation-fast);
-  transition: box-shadow var(--animation-fast), border-radius var(--animation-fast);
+  transition: box-shadow var(--animation-fast),
+    border-radius var(--animation-fast);
 }
 
 .hero-button:hover,
 .hero-button:focus {
-  background: #188CE8;
+  background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
@@ -290,12 +293,16 @@
   z-index: 10;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.2); 
+  transition: opacity var(--animation-fast), visibility var(--animation-fast);
+
 }
 .bacdroup.is-hidden {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+
+  transition: opacity var(--animation-fast), visibility var(--animation-fast);
 }
 
 .modal {
@@ -401,6 +408,29 @@
 }
 .working-section-item:not(:last-child) {
   margin-right: 30px;
+}
+.working-section-item {
+  position: relative;
+}
+
+.mini-title {
+  margin-top: 0;
+  margin-bottom: 0;
+
+  position: absolute;
+  bottom: 0px;
+  right: 0;
+  width: 100%;
+  height: 70px;
+  padding-top: 27px;
+
+  line-height: calc(16 / 14);
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+  background: rgba(47, 48, 58, 0.8);
 }
 
 /* TEAM */
@@ -574,18 +604,17 @@
   display: block;
   text-decoration: none;
   overflow: hidden;
-  transition: border var(--animation-fast), box-shadow var(--animation-fast);
+  transition: box-shadow var(--animation-fast);
 }
 
 .portfolio-link:hover,
 .portfolio-link:focus {
-  border: 1px solid #eeeeee;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-
-.portfolio-link:hover .animation-text {
+.portfolio-link:hover .animation-text,
+.portfolio-link:focus .animation-text {
   transform: translatey(0);
 }
 .animation-div {
