--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,43 @@
 :root {
-  /* Fonts */
-  --main-fonts: "Roboto", sans-serif;
-  --secondary-fonts: "Raleway", sans-serif;
-  /* Color text */
-  --main-text-color: #212121;
-  --acsent-text-color: #2196f3;
-  --blak-text-color: #000000;
-  --white-text-color: #ffffff;
-  --secondary-text-color: #757575;
-  --footer-rgba-coor: rgba(255, 255, 255, 0.6);
+  /* FONTS */
+  --main-fonts: "Monserrat", sans-serif;
+  --secondary-fonts: "Seymour One", sans-serif;
 
-  /* Color bgc */
-  --main-bgc-color: #ffffff;
-  --foot-bgc-color: #2f303a;
+  /* COLOR TEXT */
+  --main-text-color: #fcfcfc;
+  --secondary-text-color: #131313;
+  --white-text-color: #FFFFFF;
+  --light-text-time-color: #ABABAB;
 
-  /* Outher var */
-  --card-gap: 30px;
+  /* LINK TEXT COLOR */
+  --footer-link-text-color: #7A7A7A;
+  --address-link-text-color: #D6936D;
 
-  /* BTN */
-  --acsent-btn-color: #212121;
-  --main-btn-color: #ffffff;
-  --acsent-btn-bgc: #f5f4fa;
-  --main-btn-bgc: #2196f3;
-  --main-border-color: #eeeeee;
-  /* SVG */
-  --main-svg-color: #afb1b8;
+  /* BACKGROUND SITE COLOR */
+  --main-bgc-color: #84A278;
+  --white-bgc-color: #ffffff;
+
+  /* BGC PRODUCTS CARDS */
+  --ice-cream-bgc: #AEC6A5;
+  --coffee-bgc: #EFD478;
+  --milk-drinks-bgc: #D6936D;
+
+  /* SITE NAVIGATION  TEXT */
+  --defoult-nav-text-color: #F8D24E;
+  --hover-nav-text-color: #0A8817;
+  --focus-nav-tex-color: #FCFCFC;
+  --disable-nav-text-color: #ABABAB;
+
+  /* SITE BTN  border */
+  --defoult-border-color: #F8D24E;
+  --hover-focus-border-color: #0A8817;
+  --disable-border-text-color: #ABABAB;
+  /* SITE BTN  bgc */
+  --defoult-btn-bgc: #F8D24E;
+  --hover-focus-btn-bgc: #0A8817;
+  --disable-btn-bgc: #ABABAB;
+
+
   /* anim */
   --animation-fast: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -293,9 +306,8 @@
   z-index: 10;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2); 
+  background-color: rgba(0, 0, 0, 0.2);
   transition: opacity var(--animation-fast), visibility var(--animation-fast);
-
 }
 .bacdroup.is-hidden {
   opacity: 0;
